<resources>
    <string name="app_name">Клавиатура</string>

    <string name="subtype_en_US">English</string>
    <string name="subtype_ru_RU">Русский</string>

    <string name="addit">Сервис Дополнение</string>
    <string name="ortho">Сервис Орфокорректор</string>
    <string name="pred">Сервис Предиктивный ввод</string>

    <string name="ime_settings_activity">Настройки</string>
    <string name="auth_reg_activity">Вход в систему</string>
    <string name="synchronization_activity">Синхронизация</string>
    <string name="can_theme_activity">Тема подсказок</string>
    <string name="test_activity">Тестирование</string>
    <string name="learning_rate_activity">Скорость обучения</string>

    <string name="clear_personal_dictionary">Очистить персональный словарь</string>
    <string name="delete_account">Удалить аккаунт</string>

    <string name="sound_checkbox">Звук клавиш</string>
    <string name="vibration_checkbox">Виброотклик клавиш</string>
    <string name="candidates_checkbox">Показывать подсказки</string>

    <string name="auth">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="enter_to_system">Войти в систему</string>
    <string name="registration">Регистрация</string>
    <string name="register">Зарегистрироваться</string>
    <string name="exit">Выйти</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    
    <string name="synchronize">Синхронизировать</string>
    <string name="syn_warning">После начала синхронизации дождитесь ее окончания</string>
    <string name="test">Здесь можно протестировать клавиатуру на разных полях ввода</string>
    <string name="text_test">Поле для ввода текста</string>
    <string name="number_test">Поле для ввода чисел</string>
    <string name="email_test">Поле для ввода адреса электронной почты</string>
    <string name="learning_rate">Выберите скорость обучения, где 1 - самая быстрая скорость, а 10 - самая низкая</string>
    <string name="background_color">Цвет фона</string>
    <string name="text_color">Цвет текста</string>
    <string name="font">Шрифт</string>
    <string name="select_background_color">Выберите цвет фона</string>
    <string name="select_text_color">Выберите цвет текста для каждого сервиса</string>
    <string name="select_font">Выберите шрифт</string>
</resources>