<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/headerBackgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_background_color"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/backgroundColorTextView" />
        <TextView
            android:id="@+id/backgroundColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/backgroundColorSpinner"
            app:layout_constraintTop_toBottomOf="@id/headerBackgroundColor"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Spinner
            android:id="@+id/backgroundColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/backgroundColorTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerBackgroundColor"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">
        <TextView
            android:id="@+id/headerTextColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_text_color"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/additTextView" />
        <TextView
            android:id="@+id/additTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addit"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerTextColor"
            app:layout_constraintBottom_toTopOf="@id/additTextColorTextView"/>
        <TextView
            android:id="@+id/additTextColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/additTextColorSpinner"
            app:layout_constraintTop_toBottomOf="@id/additTextView"
            app:layout_constraintBottom_toTopOf="@id/orthoTextView" />
        <Spinner
            android:id="@+id/additTextColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/additTextColorTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additTextView"
            app:layout_constraintBottom_toTopOf="@id/orthoTextView" />

        <TextView
            android:id="@+id/orthoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ortho"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/additTextColorTextView"
            app:layout_constraintBottom_toTopOf="@id/orthoTextColorTextView" />
        <TextView
            android:id="@+id/orthoTextColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/orthoTextColorSpinner"
            app:layout_constraintTop_toBottomOf="@id/orthoTextView"
            app:layout_constraintBottom_toTopOf="@id/predTextView" />
        <Spinner
            android:id="@+id/orthoTextColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/orthoTextColorTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orthoTextView"
            app:layout_constraintBottom_toTopOf="@id/predTextView" />

        <TextView
            android:id="@+id/predTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pred"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orthoTextColorTextView"
            app:layout_constraintBottom_toTopOf="@id/predTextColorTextView" />
        <TextView
            android:id="@+id/predTextColorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/predTextColorSpinner"
            app:layout_constraintTop_toBottomOf="@id/predTextView"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Spinner
            android:id="@+id/predTextColorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/predTextColorTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/predTextView"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:id="@+id/headerFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_font"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fontTextView" />
        <TextView
            android:id="@+id/fontTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/font"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/fontSpinner"
            app:layout_constraintTop_toBottomOf="@id/headerFont"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Spinner
            android:id="@+id/fontSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/fontTextView"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/headerFont"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>